[tool.black]
line-length = 88
target-version = ['py38', 'py39']

[tool.poetry]
name = "lesebot"
version = "0.7.0"
description = "Our reading hall needed some robotic love, this was the result"
authors = ["Sondre Nilsen <nilsen.sondre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.7.3"
discord-py-slash-command = "^3.0.1"
requests = "^2.26.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
